--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 
 <head>
-    <title>吃掉小鹿乃</title>
-    <meta itemprop="name" content="吃掉小鹿乃" />
+    <title>无穷小亮的黄金回旋</title>
+    <meta itemprop="name" content="无穷小亮的黄金回旋" />
     <meta itemprop="description" content="新概念音游" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
@@ -40,15 +40,15 @@
             </div>
             <br />
             <div id="btn_group" style="display: block;">
-                <a class="btn btn-primary btn-lg" onclick="readyBtn()">开始游戏</a>
+                <a class="btn btn-primary btn-lg" onclick="readyBtn()">整活！</a>
                 <br/><br/>
 
                 <div class="dropdown">
                     <a class="btn btn-secondary btn-lg" href="javascript: void(0);" role="button" id="mode" data-bs-toggle="dropdown" aria-expanded="false">普通模式</a>
                     <ul class="dropdown-menu" aria-labelledby="mode">
-                        <li><a class="dropdown-item" onclick="changeMode(MODE_NORMAL)">普通模式</a></li>
-                        <li><a class="dropdown-item" onclick="changeMode(MODE_ENDLESS)">无尽模式</a></li>
-                        <li><a class="dropdown-item" onclick="changeMode(MODE_PRACTICE)">练习模式</a></li>
+                        <li><a class="dropdown-item" onclick="changeMode(MODE_NORMAL)">普通整活</a></li>
+                        <li><a class="dropdown-item" onclick="changeMode(MODE_ENDLESS)">恨活</a></li>
+                        <li><a class="dropdown-item" onclick="changeMode(MODE_PRACTICE)">刀哥模式</a></li>
                     </ul>
                 </div>
 
@@ -66,7 +66,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">标题</span>
                     </div>
-                    <input type="text" id="title" class="form-control" placeholder="吃掉小鹿乃">
+                    <input type="text" id="title" class="form-control" placeholder="无穷小亮的黄金回旋">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
